--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "npm-conf",
-	"version": "1.1.3",
+	"name": "@zkochan/npm-conf",
+	"version": "1.0.0",
 	"description": "Get the npm config",
 	"license": "MIT",
-	"repository": "kevva/npm-conf",
+	"repository": "zkochan/npm-conf",
 	"author": {
 		"name": "Kevin Martensson",
 		"email": "kevinmartensson@gmail.com",
