--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
 		"rc"
 	],
 	"dependencies": {
-		"config-chain": "^1.1.11",
-		"pify": "^3.0.0"
+		"config-chain": "^1.1.11"
 	},
 	"devDependencies": {
 		"ava": "*",
@@ -40,6 +39,7 @@
 		"babylon": "^6.17.1",
 		"eslint-import-resolver-node": "^0.3.2",
 		"npm": "^5.0.4",
+		"pify": "^4.0.1",
 		"xo": "*"
 	},
 	"xo": {
