--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ node_js:
   - '14'
   - '12'
   - '10'
+before_install:
+  - curl -L https://raw.githubusercontent.com/pnpm/self-installer/master/install.js | node
+install:
+  - pnpm install
+script:
+  - pnpm test
