fix: update how env variables are replaced

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"rc"
 	],
 	"dependencies": {
+		"@npmcli/config": "^6.1.0",
 		"@pnpm/network.ca-file": "^1.0.1",
 		"config-chain": "^1.1.11"
 	},
