--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
 		"node": ">=12"
 	},
 	"scripts": {
-		"__prepublishOnly": "node lib/make.js && tsc -p lib/tsconfig.make-out.json",
+		"__prepublishOnly": "node src/lib/make.js",
+		"build": "rimraf ./dist && tsc",
 		"test": "jest"
 	},
 	"files": [
-		"index.js",
-		"lib"
+		"./dist/**/*"
 	],
 	"keywords": [
 		"conf",
@@ -30,6 +30,8 @@
 		"config-chain": "^1.1.11"
 	},
 	"devDependencies": {
+		"@pnpm/tsconfig": "^2.0.0",
+		"@types/babylon": "^6.16.8",
 		"@types/node": "^14.0.14",
 		"babel-generator": "^6.24.1",
 		"babel-traverse": "^6.24.1",
@@ -37,6 +39,7 @@
 		"eslint-import-resolver-node": "^0.3.2",
 		"jest": "^25.1.0",
 		"npm": "^5.0.4",
-		"typescript": "^3.9.6"
+		"rimraf": "^5.0.5",
+		"typescript": "^5.2.2"
 	}
 }
