--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"scripts": {
 		"__prepublishOnly": "node src/lib/make.js",
 		"build": "rimraf ./dist && tsc",
-		"test": "jest"
+		"test": "jest",
+		"lint:ts": "eslint \"src/**/*.ts\""
 	},
 	"files": [
 		"./dist/**/*"
@@ -30,15 +31,15 @@
 		"config-chain": "^1.1.11"
 	},
 	"devDependencies": {
+		"@babel/generator": "^7.23.0",
+		"@babel/parser": "^7.23.0",
+		"@babel/traverse": "^7.23.2",
 		"@npmcli/config": "^8.0.1",
+		"@pnpm/eslint-config": "^1.1.0",
 		"@pnpm/tsconfig": "^2.0.0",
-		"@types/babylon": "^6.16.8",
 		"@types/node": "^14.0.14",
-		"babel-generator": "^6.24.1",
-		"babel-traverse": "^6.24.1",
-		"babylon": "^6.17.1",
-		"eslint-import-resolver-node": "^0.3.2",
-		"jest": "^25.1.0",
+		"eslint": "^8.52.0",
+		"jest": "^29.7.0",
 		"npm": "^5.0.4",
 		"rimraf": "^5.0.5",
 		"typescript": "^5.2.2"
